@@ -28,8 +28,11 @@ BlogEntrySchema = folder.ATFolderSchema.copy() + atapi.Schema((
         schemata='default',
         required=False,
         searchable=True,
+        allowable_content_types=('text/html', ),
+        default_content_type='text/html',
+        validators=('isTidyHtmlWithCleanup', ),
         default_input_type='text/html',
-        default_output_type='text/html',
+        default_output_type='text/x-html-safe',
         widget=atapi.RichWidget(
             label='Text',
             label_msgid='ftw_label_text',
